2013-08-14  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/htmxlintrin.h: Add file missing from last commit.
	* config/s390/htmintrin.h: Likewise.
	* config/s390/s390intrin.h: Likewise.

2013-08-14  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-08-13  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (*sse2_maskmovdqu): Emit addr32 prefix
	when Pmode != word_mode.  Add length_address attribute.
	(sse3_monitor_<mode>): Merge from sse3_monitor and
	sse3_monitor64_<mode> insn patterns.  Emit addr32 prefix when
	Pmode != word_mode.  Update insn length attribute.
	* config/i386/i386.c (ix86_option_override_internal): Update
	ix86_gen_monitor selection for merged sse3_monitor insn.

2013-08-14  Jakub Jelinek  <jakub@redhat.com>
	    Alexandre Oliva  <aoliva@redhat.com>

	PR target/58067
	* config/i386/i386.c (ix86_delegitimize_address): For CM_MEDIUM_PIC
	and CM_LARGE_PIC ix86_cmodel fall thru into the -m32 code, handle
	there also UNSPEC_PLTOFF.

2013-08-13  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/56417
	* asan.c (instrument_strlen_call): Fix typo in comment.
	Use char * type even for the lhs of POINTER_PLUS_EXPR.

2013-08-13  Vladimir Makarov  <vmakarov@redhat.com>

	Backport from mainline
	2013-06-06  Vladimir Makarov  <vmakarov@redhat.com>

	PR rtl-optimization/57459
	* lra-constraints.c (update_ebb_live_info): Fix typo for operand
	type when setting live regs.

2013-08-13  Marek Polacek  <polacek@redhat.com>
	    Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/57980
	* tree-tailcall.c (process_assignment): Return false
	when not dealing with integers or floats.

2013-08-12  Andrew Haley  <aph@redhat.com>

	Backport from mainline:
	* 2013-07-11  Andreas Schwab  <schwab@suse.de>

	* config/aarch64/aarch64-linux.h (CPP_SPEC): Define.

2013-08-13  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-08-12  Perez Read  <netfirewall@gmail.com>

	PR target/58132