@@ -1,3 +1,9 @@
+2013-08-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/58145
+	* gcc.dg/pr58145-1.c: New test.
+	* gcc.dg/pr58145-2.c: New test.
+
 2013-08-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR sanitizer/56417
